# flipt-python

./: .fernignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/flipt/: __init__.py  client.py  environment.py
src/flipt/api/: __init__.py  client.py
src/flipt/api/resources/: __init__.py
src/flipt/api/resources/auth/: __init__.py  client.py
src/flipt/api/resources/auth_method_k_8_s/: client.py
src/flipt/api/resources/auth_method_oidc/: __init__.py  client.py
src/flipt/api/resources/auth_method_token/: client.py
src/flipt/api/resources/constraints/: __init__.py  client.py
src/flipt/api/resources/distributions/: __init__.py  client.py
src/flipt/core/: client_wrapper.py
src/flipt/resources/: __init__.py
src/flipt/resources/auth/: __init__.py  client.py
src/flipt/resources/auth_method_k_8_s/: client.py
src/flipt/resources/auth_method_oidc/: __init__.py  client.py
src/flipt/resources/auth_method_token/: client.py
src/flipt/resources/commons/: __init__.py
src/flipt/resources/constraints/: __init__.py  client.py
src/flipt/resources/distributions/: __init__.py  client.py
src/flipt/resources/evaluate/: __init__.py  client.py
src/flipt/resources/evaluation/: __init__.py  client.py
src/flipt/resources/flags/: __init__.py  client.py
src/flipt/resources/namespaces/: __init__.py  client.py
src/flipt/resources/rollouts/: __init__.py  client.py
src/flipt/resources/rules/: __init__.py  client.py
src/flipt/resources/segments/: __init__.py  client.py
src/flipt/resources/variants/: __init__.py  client.py
(+117 files in other folders)
